@@ -75,4 +75,11 @@
     permission="zope.View"
     />
 
+  <!-- nagios -->
+  <browser:page
+    for="zope.location.interfaces.ISite"
+    name="zeit.workflow.task_queue_length"
+    class=".nagios.TaskQueueLength"
+    permission="zope.Public"
+    />
 </configure>
